@@ -18,11 +18,13 @@ is.redundant(x, ...)
   \item{...}{ additional arguments. }
 }
 \details{
-A rule is redundant if it does not improve confidence over the confidence 
-of its proper sub-rules. That is, a more specific rule is less 
-predictive than a more general rules and has a negative \emph{improvement} as defined by Bayardo et al. (2000).
+A rule is redundant if it does not improve confidence over a more specific 
+rule (a rule with items added to the lhs). That is, a more specific rule is redundant if it is less 
+predictive than a more general rules. This is equivalent to a 
+negative \emph{improvement} as defined by Bayardo et al. (2000).
 
-In this implementation other measures than confidence, e.g. improvement  of lift, can be used as well. 
+In this implementation other measures than confidence, e.g. 
+improvement of lift, can be used as well. 
 }
 \value{
 returns a logical vector indicating which rules are redundant.
@@ -38,6 +40,13 @@ data("Income")
 rules <- apriori(Income, parameter = list(support = 0.5))
 is.redundant(rules)
 
+## add Bayado's improvement for comparison
+quality(rules)$improvement <- interestMeasure(rules, measure = "improvement")
+
+## redundant rules
+inspect(rules[is.redundant(rules)])
+
+## non-redundant rules
 inspect(rules[!is.redundant(rules)])
 }
 \author{Michael Hahsler}
